# spongia-23

./: LICENSE  README.md  spongia-info.txt
adventure/: index.html  package.json
adventure/src/: App.jsx
content/: items.json
content/a0_appleguy/: a0_appleguy.json
content/a0_house/: a0_house.json
content/a0_inside/: a0_inside.json  a1_spawn.original.json
content/a0_observatory_exterior/: a0_observatory_exterior.json
content/a1_observatory_kitchen/: a1_observatory_kitchen.json
content/a1_observatory_left/: a1_observatory_left.json
content/a1_observatory_middle/: a1_observatory_middle.json
content/a1_observatory_right/: a1_observatory_right.json  a1_observatory_right.original.json
content/a1_spawn/: a1_spawn.json
content/a1_telescope_comet/: a1_telescope_comet.json
content/a1_telescope_empty/: a1_telescope_empty.json
content/a1_telescope_moon/: a1_telescope_moon.json
content/a1_telescope_planet/: a1_telescope_planet.json
content/a2_claysmith/: a2_claysmith.json
content/a2_forest_path/: a2_forest_path.json
content/a2_idols/: a2_idols.json
content/a2_idols_guardian/: a2_idols_guardian.json
dubbing/: getlines.py
editor/: README.md  index.html  package-lock.json  package.json
editor/src/: App.vue  (+1 more)
hints/: Cargo.toml  README.md
hints/binding/: Cargo.toml
hints/binding/src/: lib.rs
hints/generator/: Cargo.toml
hints/generator/src/: lib.rs  main.rs
player/: game.json  index.js  style.css
player-vanilla/: game.json  index.html  index.js
player-vue/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+51 files in other folders)
