[package]
name = "hints-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
generator = {path = "../generator"}

wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
